--- a/static/app.css
+++ b/static/app.css
@@ -30,7 +30,7 @@ label {
   cursor: pointer;
 }
 
-.input-name, .input-description, .input-mention_to, .input-pattern, .input-endpoint {
+.input-name, .input-description, .input-mention_to, .input-pattern, .input-endpoint, .input-spec {
   width: 500px;
   border-radius: 0.2em;
 }
@@ -97,4 +97,12 @@ table th, table td{
 
 .message p {
   text-align: center;
+}
+
+#menu {
+  width: 300px;
+  margin: 100px auto;
+  background-color: white;
+  padding: 20px;
+  border-radius: 0.5em;
 }
