--- a/static/app.css
+++ b/static/app.css
@@ -65,7 +65,7 @@ table th, table td{
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 99999998;
+  z-index: 99999997;
   background-color: rgba(0,0,0,.2);
 }
 
@@ -83,11 +83,11 @@ table th, table td{
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 99999999;
+  z-index: 99999998;
   background-color: rgba(0,0,0,.2);
 }
 
-.message-screen {
+.loading-screen {
   position: fixed;
   top: 0;
   right: 0;
@@ -97,12 +97,21 @@ table th, table td{
   background-color: rgba(0,0,0,.2);
 }
 
-.message, .confirm {
+.message, .confirm, .loading {
   width: 300px;
   margin: 100px auto;
   background-color: white;
   padding: 20px;
   border-radius: 0.5em;
+}
+
+.loading {
+  width: 300px;
+  margin: 100px auto;
+  background-color: white;
+  padding: 20px;
+  border-radius: 0.5em;
+  background-color: rgba(255,255,255,.6);
 }
 
 p.message-text {
